# ExpressionTreeVisitor

./: .gitignore  CMakeLists.txt  README.md
include/: Expression.h  Visitor.h
include/Elements/: Addition.h  Multiplication.h  Number.h
include/Visitors/: InfixVisitor.h  PostfixVisitor.h  PrefixVisitor.h
src/: main.cpp
src/Elements/: Addition.cpp  Multiplication.cpp  Number.cpp
src/Visitors/: InfixVisitor.cpp  PostfixVisitor.cpp  PrefixVisitor.cpp
test/: test_visitors.cpp
